2005-05-11  David Reveman  <davidr@novell.com>

	* src/cairo-glitz-surface.c (_cairo_glitz_surface_fill_rectangles): 
	Set fill type repeat on source surface.
	(_cairo_glitz_surface_show_glyphs): Add missing cairo operator to
	glitz operator conversion.
	(_cairo_glitz_surface_show_glyphs): Only render glyphs with non zero
	size. 

2005-05-11  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-xlib-surface.c src/cairo-xlib.h: Remove leftover
	cairo_xlib_surface_create().

2005-05-10  Owen Taylor  <otaylor@redhat.com>

	* src/cairo.c src/cairo-path-data.c src/cairo-path-data-private.h:
	Pass the gstate to _cairo_path_data_create[_flat] and use
	_cairo_gstate_backend_to_user() so as to properly handle
	the surface device offset.

2005-05-10  Carl Worth  <cworth@cworth.org>

	* src/cairo-arc.c (_cairo_arc_path_negative): Don't use return
	when calling a void function (thanks to Damien Carbery
	<damien.carbery@sun.com>). Closes bug #3134.

2005-05-10  Carl Worth  <cworth@cworth.org>

	* test/cairo-test.c:
	* test/cairo-test.h: Removing mucking around with stderr and add a
	cairo_test_log function instead.
	
	* test/buffer-diff.c:
	* test/create-for-png.c:
	* test/pdf-surface.c:
	* test/read-png.c:
	* test/trap-clip.c:
	* test/xmalloc.c: Switch all error messages from
	fprintf(stderr,...) to cairo_test_log(...).

2005-05-10  Carl Worth  <cworth@cworth.org>

	* configure.in: Fix URLs for glitz and xlibs, (thanks to Jason
	Dorje Short <jdorje@users.sf.net>).

2005-05-10  Carl Worth  <cworth@cworth.org>

	* configure.in: Update to current canonical URL for XCB.

2005-05-10  Carl Worth  <cworth@cworth.org>

	* src/cairo-wideint.h: Don't guess and make our own definitions
	for uint8_t, etc. Just error out if we can't find a suitable
	header file.

	* src/cairo-png.c: (unpremultiply_data), (premultiply_data):
	* test/read-png.c: (premultiply_data): Fix to use fixed-size type
	so that this code works when sizeof(unsigned long) != 32. Thanks
	to Manish Singh.
